DontExpiReBack/src/main/java/org/example/error/PasswordNotMatchException.java
package org.example.error;

public class PasswordNotMatchException extends RuntimeException {
    public PasswordNotMatchException(String message) {
        super(message);
    }
}
